upgrade leaflet to the master version - taken 2013-05-12 - 3d3e2cd should fix issues with layer control on mobile, and other improvements also - the convention for marker filenames has changed from ...@2x.png to ...-2x.png for the double sized ones - so changed our files to match (we had a mix of ...@2x.png and ..._2x.png)

--- a/external/leaflet.css
+++ b/external/leaflet.css
@@ -5,6 +5,7 @@
 .leaflet-marker-icon,
 .leaflet-marker-shadow,
 .leaflet-tile-pane,
+.leaflet-tile-container,
 .leaflet-overlay-pane,
 .leaflet-shadow-pane,
 .leaflet-marker-pane,
@@ -27,6 +28,7 @@
 	-webkit-user-select: none;
 	   -moz-user-select: none;
 	        user-select: none;
+	-webkit-user-drag: none;
 	}
 .leaflet-marker-icon,
 .leaflet-marker-shadow {
@@ -191,90 +193,90 @@
 /* general toolbar styles */
 
 .leaflet-bar {
-	box-shadow: 0 0 8px rgba(0,0,0,0.4);
-	border: 1px solid #888;
-	-webkit-border-radius: 5px;
-	        border-radius: 5px;
+	box-shadow: 0 1px 7px rgba(0,0,0,0.65);
+	-webkit-border-radius: 4px;
+	        border-radius: 4px;
 	}
-.leaflet-bar-part {
-	background-color: rgba(255, 255, 255, 0.8);
-	border-bottom: 1px solid #aaa;
+.leaflet-bar a {
+	background-color: #fff;
+	border-bottom: 1px solid #ccc;
+	width: 26px;
+	height: 26px;
+	line-height: 26px;
+	display: block;
+	text-align: center;
+	text-decoration: none;
+	color: black;
 	}
-.leaflet-bar-part-top {
-	-webkit-border-radius: 4px 4px 0 0;
-	        border-radius: 4px 4px 0 0;
+.leaflet-bar a,
+.leaflet-control-layers-toggle {
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	display: block;
 	}
-.leaflet-bar-part-bottom {
-	-webkit-border-radius: 0 0 4px 4px;
-	        border-radius: 0 0 4px 4px;
+.leaflet-bar a:hover {
+	background-color: #f4f4f4;
+	}
+.leaflet-bar a:first-child {
+	-webkit-border-top-left-radius: 4px;
+	        border-top-left-radius: 4px;
+	-webkit-border-top-right-radius: 4px;
+	        border-top-right-radius: 4px;
+	}
+.leaflet-bar a:last-child {
+	-webkit-border-bottom-left-radius: 4px;
+	        border-bottom-left-radius: 4px;
+	-webkit-border-bottom-right-radius: 4px;
+	        border-bottom-right-radius: 4px;
 	border-bottom: none;
+	}
+.leaflet-bar a.leaflet-disabled {
+	cursor: default;
+	background-color: #f4f4f4;
+	color: #bbb;
 	}
 
 .leaflet-touch .leaflet-bar {
 	-webkit-border-radius: 10px;
 	        border-radius: 10px;
 	}
-.leaflet-touch .leaflet-bar-part {
-	border-bottom: 4px solid rgba(0,0,0,0.3);
+.leaflet-touch .leaflet-bar a {
+	width: 30px;
+	height: 30px;
 	}
-.leaflet-touch .leaflet-bar-part-top {
-	-webkit-border-radius: 7px 7px 0 0;
-	        border-radius: 7px 7px 0 0;
+.leaflet-touch .leaflet-bar a:first-child {
+	-webkit-border-top-left-radius: 7px;
+	        border-top-left-radius: 7px;
+	-webkit-border-top-right-radius: 7px;
+	        border-top-right-radius: 7px;
 	}
-.leaflet-touch .leaflet-bar-part-bottom {
-	-webkit-border-radius: 0 0 7px 7px;
-	        border-radius: 0 0 7px 7px;
+.leaflet-touch .leaflet-bar a:last-child {
+	-webkit-border-bottom-left-radius: 7px;
+	        border-bottom-left-radius: 7px;
+	-webkit-border-bottom-right-radius: 7px;
+	        border-bottom-right-radius: 7px;
 	border-bottom: none;
 	}
 
 
 /* zoom control */
 
-.leaflet-container .leaflet-control-zoom {
-	margin-left: 13px;
-	margin-top: 12px;
-	}
-.leaflet-control-zoom a {
-	width: 22px;
-	height: 22px;
-	text-align: center;
-	text-decoration: none;
-	color: black;
-	}
-.leaflet-control-zoom a,
-.leaflet-control-layers-toggle {
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
-	display: block;
-	}
-.leaflet-control-zoom a:hover {
-	background-color: #fff;
-	color: #777;
-	}
 .leaflet-control-zoom-in {
-	font: bold 18px/24px Arial, Helvetica, sans-serif;
+	font: bold 18px 'Lucida Console', Monaco, monospace;
 	}
 .leaflet-control-zoom-out {
-	font: bold 23px/20px Tahoma, Verdana, sans-serif;
-	}
-.leaflet-control-zoom a.leaflet-control-zoom-disabled {
-	cursor: default;
-	background-color: rgba(255, 255, 255, 0.8);
-	color: #bbb;
+	font: bold 22px 'Lucida Console', Monaco, monospace;
 	}
 
-.leaflet-touch .leaflet-control-zoom a {
-	width: 30px;
-	height: 30px;
-	}
 .leaflet-touch .leaflet-control-zoom-in {
-	font-size: 24px;
-	line-height: 29px;
+	font-size: 22px;
+	line-height: 30px;
 	}
 .leaflet-touch .leaflet-control-zoom-out {
 	font-size: 28px;
-	line-height: 24px;
+	line-height: 30px;
 	}
+
 
 /* layers control */
 
